UI Commit 2: addition of ListView
Added ListView, a CircleAdapter, and new xml files

--- a/CallYourMother/res/values/strings.xml
+++ b/CallYourMother/res/values/strings.xml
@@ -3,5 +3,6 @@
 
     <string name="app_name">CallYourMother</string>
     <string name="hello_world">Hello world!</string>
+    <string name="add_circle">Add a New Circle</string>
 
 </resources>
